--- a/2022-2023/Bakalářská práce/Dokumentace/Reference.bib
+++ b/2022-2023/Bakalářská práce/Dokumentace/Reference.bib
@@ -25,3 +25,10 @@
   url     = {https://www.usa.philips.com/healthcare/product/HCNCVD207/azurion-7-c20-with-flexarm-image-guided-therapy-system},
   urldate = {2023-05-14}
 }
+@online{Github,
+  author  = {{Pavel Březina}},
+  title   = {Bakalářská práce},
+  year    = {2023},
+  url     = {https://github.com/brezina1/ZCU-FAV-Public/tree/master/2022-2023/Bakal%C3%A1%C5%99sk%C3%A1%20pr%C3%A1ce},
+  urldate = {2023-05-17}
+}
