--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS Interpolace 4D křivky.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS Interpolace 4D křivky.tex
@@ -1,7 +1,7 @@
 \subsection{Interpolace 4D křivky}
-Interpolací 4D křivky je v tomto případě myšlena křivka tvořena 3D body ($x, y,
-    z$), které se mění v závislosti na 4. souřadnici $w$. Tudíž nechceme
-interpolovat jednu dlouhou 4D křivku (jak jsme dosud dělali v předchozích
+Interpolací 4D křivky je v~tomto případě myšlena křivka tvořena 3D body ($x, y,
+    z$), které se mění v~závislosti na 4. souřadnici $w$. Tudíž nechceme
+interpolovat jednu dlouhou 4D křivku (jak jsme dosud dělali v~předchozích
 případech), ale vlastně několik 3D křivek mezi sebou za využití 4.
 souřadnice.\par Tohoto docílíme interpolací samotných bodů příslušných křivek
 přes souřadnici $w$, kterou lze vidět na obrázcích č. \ref{fig:Demo 4D
@@ -10,11 +10,11 @@ přes souřadnici $w$, kterou lze vidět na obrázcích č. \ref{fig:Demo 4D
     souřadnici w 3}. Dále obrázky č. \ref{fig:Demo 4D Interpolace mezi body přes
     souřadnici w shora 1}, \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w
     shora 2} a \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w shora 3}
-značí pohled na přechodové křivky shora, a obrázky č. \ref{fig:Demo 4D
+značí pohled na přechodové křivky shora, a~obrázky č. \ref{fig:Demo 4D
     Interpolace mezi body přes souřadnici w konst x 1}, \ref{fig:Demo 4D
     Interpolace mezi body přes souřadnici w konst x 2} a \ref{fig:Demo 4D
     Interpolace mezi body přes souřadnici w konst x 3} ukazují interpolaci mezi
-jedním bodem z každé křivky.
+jedním bodem z~každé křivky.
 
 \subsubsection{4D Křivka číslo 1}
 Tuto 4D křivku tvoří tři 3D křivky popsané body:
@@ -28,7 +28,7 @@ kde
     \bm{x} = linspace(0, 2\cdot\pi, 25)
 \end{equation}
 Tyto fáze naší 4D křivky jsou rovnoměrně rozmístěny ve 4. dimenzi, tj.
-$\bm{w}$ = $0, 100, 200$ při křivky 1, 2 a 3 respektive. Tímto by přechod mezi křivkami měl
+$\bm{w}$ = $0, 100, 200$ při křivky 1, 2 a~3 respektive. Tímto by přechod mezi křivkami měl
 být \todo{rovnoměrný? plynulý? symetrický?}. Ukázka přechodu mezi těmito křivkami je
 zobrazena na animaci č. \ref{fig:Demo 4D Interpolace mezi křivkami č. 1}.
 \subsubsection{4D Křivka číslo 2}
@@ -43,7 +43,7 @@ kde
     \bm{x} = linspace(0, 2\cdot\pi, 25)
 \end{equation}
 V tomto případě interpolační křivky již nejsou rozmístěny rovnoměrně ve 4. dimenzi,
-což v našem případě znamená, že přechod od křivky tvořenou body $\bm{Q}_1$ do křivky
+což v~našem případě znamená, že přechod od křivky tvořenou body $\bm{Q}_1$ do křivky
 tvořenou $\bm{Q}_2$ je $4\times$ kratší, než přechod od $\bm{Q}_2$ do $\bm{Q}_3$. Toto
 je naznačené na obrázcích č.~\ref{fig:Demo 4D Interpolace mezi body přes souřadnici w 2},
 \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w shora 2} a
@@ -63,8 +63,8 @@ kde
 \begin{equation}
     \bm{x} = linspace(0, 2\cdot\pi, 25)
 \end{equation}
-Zde se pro ukázku interpolované křivky mění i v ose $z$ v závislosti na $x$.
-Obrázky k této interpolaci jsou \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w 3},
+Zde se pro ukázku interpolované křivky mění i~v~ose $z$ v~závislosti na $x$.
+Obrázky k~této interpolaci jsou \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w 3},
 \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w shora 3},
 \ref{fig:Demo 4D Interpolace mezi body přes souřadnici w konst x 3} a
 \ref{fig:Demo 4D Interpolace mezi křivkami č. 3}.
@@ -88,7 +88,7 @@ Obrázky k této interpolaci jsou \ref{fig:Demo 4D Interpolace mezi body přes s
     \begin{figure}[H]
         \centering
         \includegraphics[height=0.4\textheight]{Generated/Interpolace 4D křivky - Interpolace mezi body ve 4. dimenzi 1 vlákno č. 1.pdf}
-        \caption{Ukázka interpolace pro 1 bod z každé křivky č. 1}
+        \caption{Ukázka interpolace pro 1 bod z~každé křivky č. 1}
         \label{fig:Demo 4D Interpolace mezi body přes souřadnici w konst x 1}
     \end{figure}
     \ifthenelse{\boolean{includeAnimations}}{
@@ -131,7 +131,7 @@ Obrázky k této interpolaci jsou \ref{fig:Demo 4D Interpolace mezi body přes s
     \begin{figure}[H]
         \centering
         \includegraphics[height=0.4\textheight]{Generated/Interpolace 4D křivky - Interpolace mezi body ve 4. dimenzi 1 vlákno č. 2.pdf}
-        \caption{Ukázka interpolace pro 1 bod z každé křivky č. 2}
+        \caption{Ukázka interpolace pro 1 bod z~každé křivky č. 2}
         \label{fig:Demo 4D Interpolace mezi body přes souřadnici w konst x 2}
     \end{figure}
     \ifthenelse{\boolean{includeAnimations}}{
@@ -174,7 +174,7 @@ Obrázky k této interpolaci jsou \ref{fig:Demo 4D Interpolace mezi body přes s
     \begin{figure}[H]
         \centering
         \includegraphics[height=0.4\textheight]{Generated/Interpolace 4D křivky - Interpolace mezi body ve 4. dimenzi 1 vlákno č. 3.pdf}
-        \caption{Ukázka interpolace pro 1 bod z každé křivky č. 3}
+        \caption{Ukázka interpolace pro 1 bod z~každé křivky č. 3}
         \label{fig:Demo 4D Interpolace mezi body přes souřadnici w konst x 3}
     \end{figure}
     \ifthenelse{\boolean{includeAnimations}}{
