--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS křivky.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS křivky.tex
@@ -1,5 +1,5 @@
 \subsection[NURBS křivky]{NURBS křivky \footcite[kapitola 3.2]{The_NURBS_Book}}\label{section: NURBS křivky}
-Neuniformní racionální B-spline (NURBS) křivku $\bm{C}(u)$\footnote{Jedná se tedy o vektorovou funkci skalární proměnné.} definujeme následovně:
+Neuniformní racionální B-spline (NURBS) křivku $\bm{C}(u)$\footnote{Jedná se tedy o~vektorovou funkci skalární proměnné.} definujeme následovně:
 \begin{equation}
     \bm{C}(u) = \sum_{i = 0}^{n} N_{i, p}(u)\bm{P}_i\quad a\le u \le b
 \end{equation}
