--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/Návrh systému automatické kalibrace CCT/Analýza testu odchylky proudu.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/Návrh systému automatické kalibrace CCT/Analýza testu odchylky proudu.tex
@@ -1,11 +1,11 @@
 \subsubsection{Analýza testu odchylky proudu}
 Tato sekce se zabývá záznamem číslo \ref{item:analýza soubor test proudu}. Záznam je tvořen vícero soubory, každý odpovídající
-jednomu pohybu kloubu $C_{Arc}$ pro fixní polohu $Prop$ a $Ids$. Stejně jako v sekci \nameref{section:Analýza záznamu jednoho kloubu} se budeme zajímat o pomalý pohyb s konstantní rychlostí, vyhovující hodnoty pro jednotlivé typy trajektorií jsou zobrazeny na obrázcích č.~\ref{fig: trajektorie kloubu CArc dopředného pohybu Ids=0}, \ref{fig: trajektorie kloubu CArc dopředného pohybu Ids=1}, \ref{fig: trajektorie kloubu CArc zpětného pohybu Ids=0}, \ref{fig: trajektorie kloubu CArc zpětného pohybu Ids=1}.\par
+jednomu pohybu kloubu $C_{Arc}$ pro fixní polohu $Prop$ a $Ids$. Stejně jako v~sekci \nameref{section:Analýza záznamu jednoho kloubu} se budeme zajímat o~pomalý pohyb s~konstantní rychlostí. Vyhovující hodnoty pro jednotlivé typy trajektorií jsou zobrazeny na obrázcích č.~\ref{fig: trajektorie kloubu CArc dopředného pohybu Ids=0}, \ref{fig: trajektorie kloubu CArc dopředného pohybu Ids=1}, \ref{fig: trajektorie kloubu CArc zpětného pohybu Ids=0}, \ref{fig: trajektorie kloubu CArc zpětného pohybu Ids=1}.\par
 Ze záznamu jsme vypočetli nový kompenzační proud kalibrační tabulky $I_{CCT}^{new}$ pomocí vzorečku:
 \begin{align}
     I_{CCT}^{new} = I_{CCT} + I_{set} - I_{measured}
 \end{align}
-kde $I_{CTT}$ značí kompenzační proud z CCT, $I_{set}$ výstup regulátoru a $I_{measured}$ je měřený proud tekoucí pohonem. \par
+kde $I_{CTT}$ značí původní kompenzační proud z~CCT, $I_{set}$ výstup regulátoru a $I_{measured}$ je měřený proud tekoucí pohonem. \par
 Takto vypočtené hodnoty jsou zobrazeny na obrázcích č.~\ref{fig: Vypočtený kompenzační proud ze záznamu testovací trajektorie pro dopředný pohyb, Ids = 0 m}, \ref{fig: Vypočtený kompenzační proud ze záznamu testovací trajektorie pro dopředný pohyb, Ids = 1 m}, \ref{fig: Vypočtený kompenzační proud ze záznamu testovací trajektorie pro zpětný pohyb, Ids = 0 m}, \ref{fig: Vypočtený kompenzační proud ze záznamu testovací trajektorie pro zpětný pohyb, Ids = 1 m}. Jak lze vidět, výsledky jsou velmi zašuměné, přesto můžeme vypozorovat, že zašuměná data přibližně opisují kalibrační tabulku.
 \paragraph{Zpracování zašuměných dat}
 Na zašuměná data zkusíme aplikovat 2 různé způsoby zbavení se šumu:
@@ -13,7 +13,7 @@ Na zašuměná data zkusíme aplikovat 2 různé způsoby zbavení se šumu:
     \item Použití funkce Matlab \texttt{smooth}
     \item Použití NURBS aproximace křivky ze sekce \ref{sec:NURBS aproximace křivky}
 \end{enumerate}
-Výsledky těchto funkcí jsou na obrázcích č.~\ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro dopředný pohyb, Ids = 0 m}, \ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro dopředný pohyb, Ids = 1 m}, \ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro zpětný pohyb, Ids = 0 m}, \ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro zpětný pohyb, Ids = 1 m}. Z takto upravených dat je již lépe vidět, že hodnoty nového kompenzačního proudu lemují příslušnou CCT s výjimkou okolí souřadnice $Prop = 0.5$ a $C_{Arc} = 0.85$. Na tomto místě se hodnoty značně odchylují od původních hodnot kalibrační tabulky, toto je dále lépe vidět na obrázcích č.~\ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro dopředný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro dopředný pohyb, Ids = 1 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro zpětný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro zpětný pohyb, Ids = 1 m}, a \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro dopředný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro dopředný pohyb, Ids = 1 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro zpětný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro zpětný pohyb, Ids = 1 m}, kde je uvedena NURBS interpolace zpracovaných dat. Odchylka může být způsobena změnou fyzikálních parametrů manipulátoru a nebo Phillips používá nějaký svůj vlastní algoritmus, který data vyhodnocuje jiným způsobem. Nicméně pro naše účely se tyto odlišnosti hodí, protože nám umožní odzkoušení aktualizace CCT --- viz kapitola~\nameref{section:aktualizace CCT}.
+Výsledky těchto funkcí jsou na obrázcích č.~\ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro dopředný pohyb, Ids = 0 m}, \ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro dopředný pohyb, Ids = 1 m}, \ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro zpětný pohyb, Ids = 0 m}, \ref{fig: Zpracovaný zašuměný záznam kompenzačního proudu pro zpětný pohyb, Ids = 1 m}. Z~takto upravených dat je již lépe vidět, že hodnoty nového kompenzačního proudu lemují příslušnou CCT s~výjimkou okolí souřadnice $Prop = 0.5$ a $C_{Arc} = 0.85$. Na tomto místě se hodnoty značně odchylují od původních hodnot kalibrační tabulky, toto je dále lépe vidět na obrázcích č.~\ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro dopředný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro dopředný pohyb, Ids = 1 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro zpětný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí funkce smooth pro zpětný pohyb, Ids = 1 m} a \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro dopředný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro dopředný pohyb, Ids = 1 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro zpětný pohyb, Ids = 0 m}, \ref{fig: NURBS interpolace zpracovaných dat pomocí NURBS aproximace pro zpětný pohyb, Ids = 1 m}, kde je uvedena NURBS interpolace zpracovaných dat. Odchylka může být způsobena změnou fyzikálních parametrů manipulátoru a~nebo Phillips používá nějaký svůj vlastní algoritmus, který data vyhodnocuje jiným způsobem. Nicméně pro naše účely se tyto odlišnosti hodí, protože nám umožní odzkoušení aktualizace CCT --- viz kapitola~\nameref{section:aktualizace CCT}.
 \begin{landscapeimagepage}
     \begin{figure}[H]
         \centering
