--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/TitlePage.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/TitlePage.tex
@@ -9,7 +9,7 @@
 \end{center}
 \vfill{}
 \noindent
-Západočeská Univerzita V Plzni \hfill Pavel Březina\\
+Západočeská Univerzita V~Plzni \hfill Pavel Březina\\
 Katedra Kybernetiky            \hfill letní semestr\\
 BPAŘR             \hfill \today
 \thispagestyle{empty}
