--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/Závěr.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/Závěr.tex
@@ -1,9 +1,8 @@
 \section{Závěr}
 Cílem této práce bylo navrhnout automatickou aktualizaci proudové kalibrační tabulky na základě naměřených dat získaných za běžného užívání manipulátoru.
 \par
-Nejprve jsme popsali řízený a řídící systém, včetně schématu regulační smyčky na kterém je ukázáno jak kalibrační tabulka spolupracuje s regulátorem. V další obsáhlé kapitole jsme rozebrali veškerou teorii k NURBS splinům, konkrétně NURBS 2D a 3D křivkám, 3D a 4D (nad)povrchům a k nim příslušné přístupy interpolace a aproximace včetně jejich ukázek.
+Nejprve jsme popsali řízený a~řídící systém, včetně schématu regulační smyčky na kterém je ukázáno jak kalibrační tabulka spolupracuje s~ostatními kompenzátory. V~další obsáhlé kapitole jsme rozebrali veškerou teorii k~NURBS splinům, konkrétně NURBS 2D a~3D křivkám, 3D a~4D (nad)povrchům a~k~nim příslušné přístupy interpolace a~aproximace včetně jejich ukázek.
 \par 
-Poslední kapitola obsahuje již samostatné zpracování záznamů pohybu manipulátoru, které poskytla společnost Phillips za účelem tohoto výzkumu a vývoje. Podařilo se nám ověřit existenci vhodných bodů pro aktualizaci CCT při manuální operaci manipulátoru uživatelem. Pomocí těchto extrahovaných bodů jsme potom úspěšně sestavili vlastní verze kalibračních tabulek. Tyto nové verze tabulek jsme využily pro odzkoušení aktualizace původních verzí CCT.
+Poslední kapitola obsahuje již samostatné zpracování záznamů pohybu manipulátoru, které poskytla společnost Phillips za účelem tohoto výzkumu a~vývoje. Podařilo se nám ověřit možnost extrakce vhodných bodů pro aktualizaci CCT při manuální operaci manipulátoru uživatelem. Pomocí těchto extrahovaných bodů jsme potom úspěšně sestavili vlastní verze kalibračních tabulek. Tyto nové verze tabulek jsme využily pro odzkoušení aktualizace původních verzí CCT.
 \par
-\todo{změnit}
-Na tuto práci by se dalo dále navázat dalším výzkumem, který by se pravděpodobně zabýval lepším přístupem k aproximaci 3D/4D (nad)povrchu, který je tvořen body neležícími v mřížce --- tj. například pokusit se na tento problém také aplikovat metodu nejmenších čtverců, aby vzniklé řešení bylo matematicky podmíněné. Dále je otázkou dalšího výzkumu rozsáhlejší sběr aktualizačních bodů pro CCT --- momentálně námi navržený způsob sběru dat v kombinaci s naší 4D aproximací pomocí Gaussovo funkce téměř nikdy neaktualizuje body CCT ležící v mezních polohách kloubů.
+Otázkou dalšího výzkumu je vylepšení metody sběru dat pro aktualizaci CCT, kterou jsme v~této práci pouze naznačili. Následujícím krokem bude otestování sběru dat ideálně již na reálném stroji, aby se ověřilo, že zvolený přístup funguje v~praxi tak, jak je od něj očekáváno. Dalším možným krokem výzkumu je na problém aktualizace CCT aplikovat řešení založeném na využití neuronových sítí, toto s~sebou ale přináší své vlastní problémy a~omezení, kterým je třeba věnovat pozornost, jako jsou například: volba struktury sítě, počet vrstev, aktivační funkce a~také ověření výsledků --- tj.~hladkost a~přesnost odhadovaných kompenzačních proudů.
