--- a/Common/Tex/Packages.tex
+++ b/Common/Tex/Packages.tex
@@ -57,3 +57,7 @@
 
 \usepackage{scrextend} % check if page is odd or even but better
 \usepackage{afterpage}
+
+\usepackage{csquotes}
+\DeclareQuoteAlias{german}{czech}
+\MakeOuterQuote{"}
