--- a/2022-2023/Bakalářská práce/Dokumentace - PAŘR5/Tex/NURBS/NURBS Aproximace povrchu Gauss.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace - PAŘR5/Tex/NURBS/NURBS Aproximace povrchu Gauss.tex
@@ -18,7 +18,7 @@ kde
     \item $\sigma_y$ -- variance osy $y$
 \end{itemize}
 Užitím Gaussovy funkce je zajištěno, že váha aproximovaného bodu se vzdáleností klesá k nule
-(viz obrázky č.~\ref{fig:Ukázka Gaussovo funkce 3D}~a~\ref{fig:Ukázka Gaussovo funkce 4D}),
+(viz obrázky č.~\ref{fig:Ukázka Gaussovy funkce 3D}~a~\ref{fig:Ukázka Gaussovy funkce 4D}),
 díky tomu je možné provádět vážený průměr přes všechny body\footnote{V případě nadměrného množství bodů lze průměrování omezit na okolí aproximovaného bodu pro snížení výpočetní náročnosti.}.\par
 Algoritmus vyžaduje libovolnou množinu původních bodů $\bm{Q}_i$, množinu
 aproximačních bodů $\bar{\bm{Q}}_j$ s množinou příslušných vah $\omega_j$ a již
@@ -39,56 +39,56 @@ zmíněné parametry $\sigma_x$, $\sigma_y$\footnote{V případě potřeby algor
           aproximační body, jinak konec
 \end{enumerate}
 Pomocí parametrů $\sigma_x, \sigma_y$ lze upřednostnit aproximaci v ose $x$ nebo $y$. Tento efekt lze vidět na obrázcích
-č.~\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 1},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 2},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 3},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 4},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 5},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 6},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 7},
-\ref{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 8},
+č.~\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 1},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 2},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 3},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 4},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 5},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 6},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 7},
+\ref{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 8},
 kde je obsažena i samotná ukázka takto navržené aproximace\footnote{Přestože
     ukázky obsahují povrchy tvořeny body v mřížce, není to vyžadováno výpočetním algoritmem.
 }.
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth]{Generated/Ukázka Gaussovo funkce 3D.pdf}
-    \caption{Ukázka Gaussovo funkce $f(x,y)$}
-    \label{fig:Ukázka Gaussovo funkce 3D}
+    \includegraphics[width=\textwidth]{Generated/Ukázka Gaussovy funkce 3D.pdf}
+    \caption{Ukázka Gaussovy funkce $f(x,y)$}
+    \label{fig:Ukázka Gaussovy funkce 3D}
 \end{figure}
 \begin{landscapeimagepage}
     \begin{figure}[H]
         \centering
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 1.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~1}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 1}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 1.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~1}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 1}
         \end{subfigure}
         \vspace{0.5cm}
         \hspace{2.5cm}
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 2.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~2}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 2}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 2.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~2}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 2}
         \end{subfigure}
         \vspace{0.5cm}
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 3.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~3}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 3}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 3.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~3}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 3}
         \end{subfigure}
         \hspace{2.5cm}
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 4.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~4}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 4}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 4.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~4}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 4}
         \end{subfigure}
-        \caption{Ukázka aproximace povrchu č. 1 s užitím Gaussovo funkce s různými parametry}
-        \label{fig:Ukázka aproximace povrchu č. 1 s užitím Gaussovo funkce s různými parametry}
+        \caption{Ukázka aproximace povrchu č. 1 s užitím Gaussovy funkce s různými parametry}
+        \label{fig:Ukázka aproximace povrchu č. 1 s užitím Gaussovy funkce s různými parametry}
     \end{figure}
 \end{landscapeimagepage}
 
@@ -97,33 +97,33 @@ kde je obsažena i samotná ukázka takto navržené aproximace\footnote{Přesto
         \centering
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 5.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~5}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 5}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 5.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~5}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 5}
         \end{subfigure}
         \vspace{0.5cm}
         \hspace{2.5cm}
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 6.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~6}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 6}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 6.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~6}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 6}
         \end{subfigure}
         \vspace{0.5cm}
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 7.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~7}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 7}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 7.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~7}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 7}
         \end{subfigure}
         \hspace{2.5cm}
         \begin{subfigure}{.5\textheight}
             \centering
-            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovo funkce č. 8.pdf}
-            \caption{Aproximace pro různé parametry Gaussovo funkce č.~8}
-            \label{fig:Ukázka aproximace povrchu s užitím Gaussovo funkce č. 8}
+            \includegraphics[width=\textwidth]{Generated/Ukázka aproximace s užitím Gaussovy funkce č. 8.pdf}
+            \caption{Aproximace pro různé parametry Gaussovy funkce č.~8}
+            \label{fig:Ukázka aproximace povrchu s užitím Gaussovy funkce č. 8}
         \end{subfigure}
-        \caption{Ukázka aproximace povrchu č. 2 s užitím Gaussovo funkce s různými parametry}
-        \label{fig:Ukázka aproximace povrchu č. 2 s užitím Gaussovo funkce s různými parametry}
+        \caption{Ukázka aproximace povrchu č. 2 s užitím Gaussovy funkce s různými parametry}
+        \label{fig:Ukázka aproximace povrchu č. 2 s užitím Gaussovy funkce s různými parametry}
     \end{figure}
 \end{landscapeimagepage}
