--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS Aproximace křivky.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS Aproximace křivky.tex
@@ -1,5 +1,5 @@
 \subsection{NURBS aproximace křivky\label{sec:NURBS aproximace křivky}}
-Mějme množinu $m + 1$ bodů $\bm{Q_k}$ ${k = 0, \ldots, m}$ a hledáme
+Mějme množinu $m + 1$ bodů $\bm{Q}_k$, ${k = 0, \ldots, m}$ a~hledáme
 křivku stupně $p$ ve tvaru:
 \begin{equation}
     \bm{C}(u) = \sum_{i = 0}^{n}N_{i,p}(u)\bm{P}_i\quad u\in[0,1], \quad\quad n \ge p \ge 1
@@ -34,9 +34,8 @@ pro kterou platí:
                     \begin{equation}
                         \bm{R}_k  = \bm{Q}_k - N_{0, p}(\bar{u}_k)\bm{Q}_0 - N_{n,p}(\bar{u}_k)\bm{Q}_m \quad\quad k = 1, \ldots, m -1
                     \end{equation}
-              \item $\bm{W}$ je diagonální matice $(m - 1) \times (m - 1)$\footnote{Váhy
-                        krajních bodů nehrají roli, protože tyto body jsou interpolovány}
-                    s váhami jednotlivých bodů:
+              \item $\bm{W}$ je diagonální matice $(m - 1) \times (m - 1)$\footnote{Krajní body body jsou interpolovány a proto jejich váhy jsou vynechány}
+                    s~váhami jednotlivých bodů:
                     \begin{equation}
                         \bm{W}  = \begin{bmatrix}
                             \omega_1 & 0        & \cdots & 0            \\
@@ -49,8 +48,8 @@ pro kterou platí:
 
           \end{itemize}
 \end{itemize}
-Opět musíme vhodně zvolit parametry $\bar{u}_k$ a uzlový vektor $\bm{U}$. Parametr $\bar{u}$
-můžeme vypočítat pomocí předpisu \ref{eq:chord length}.
+Opět musíme vhodně zvolit parametry $\bar{u}_k$ a~uzlový vektor $\bm{U}$. Parametr $\bar{u}$
+můžeme vypočítat pomocí předpisu (\ref{eq:chord length}).
 \par Prvky uzlového vektoru poté vypočteme následovně:
 \begin{equation}
     d = \frac{m + 1}{n - p + 1}
@@ -61,9 +60,8 @@ můžeme vypočítat pomocí předpisu \ref{eq:chord length}.
     u_0       & = \ldots = u_p = 0 \quad\quad                               & \quad\quad u_{n + 1} & = \ldots = u_{n + p + 1} = 1
 \end{alignat}
 
-Takto navržená aproximace je citlivá na poměr počtu řídících bodů a počtu
-aproximačních bodů tj.: $r = \frac{n}{m + 1}$. Jak se $r$ blíží k $1$, tím je
-větší šance vzniku velkých kmitů, obzvlášť v případě zašuměných dat --- viz
+Takto navržená aproximace je citlivá na poměr počtu řídících bodů a~počtu
+aproximačních bodů tj.: $r = \frac{n}{m + 1}$. Jak se $r$ blíží k $1$, tím větší je šance vzniku velkých kmitů, obzvlášť v~případě zašuměných dat --- viz
 obrázky č. \ref{fig:Demo aproximace křivky 1}, \ref{fig:Demo aproximace křivky
     2}, \ref{fig:Demo aproximace křivky 3}, \ref{fig:Demo aproximace křivky 4}.\par
 Ideálním případem pro tento algoritmus je když platí $m \gg n$ --- viz obrázek č.
