--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS povrchy.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/NURBS/NURBS povrchy.tex
@@ -1,6 +1,6 @@
 \subsection[NURBS povrchy]{NURBS povrchy\footcite[kapitola 3.4]{The_NURBS_Book}}
 Pro sestrojení NURBS povrchu potřebujeme obousměrnou síť řídících bodů $\bm{P}_{i,j}$ a
-dva uzlové vektory $\bm{U}$ a $\bm{V}$, poté je možné sestrojit povrch $\bm{S}(u,v)$\footnote{Jedná se tedy o vektorovou funkci dvou skalárních proměnných.}:
+dva uzlové vektory $\bm{U}$ a $\bm{V}$, poté je možné sestrojit povrch $\bm{S}(u,v)$\footnote{Jedná se tedy o~vektorovou funkci dvou skalárních proměnných.}:
 \begin{align}
     \bm{S}(u,v) = \sum_{i=0}^{n}\sum_{j=0}^{m}N_{i,p}(u)N_{j,q}(v)\bm{P}_{i,j}
 \end{align}
