--- a/2022-2023/Bakalářská práce/Dokumentace/Tex/ÚvodníVěci.tex
+++ b/2022-2023/Bakalářská práce/Dokumentace/Tex/ÚvodníVěci.tex
@@ -1,35 +1,36 @@
 % \renewcommand{\labelenumii}{\alph{enumii}.}
 \includepdf[pages=-, offset=5mm 0mm]{Img/Zadání BP.pdf}
 
-\vspace*{\fill}
-{\begin{center}
-    \todo{\Huge{VYNECHAT PŘI TISKU}}
-\end{center}}
-\vspace*{\fill}
-\newpage
-
-\vspace*{\fill}
+% \vspace*{\fill}
+% {\begin{center}
+%         \todo{\Huge{VYNECHAT PŘI TISKU}}
+%     \end{center}}
+% \vspace*{\fill}
+% \newpage
+% \vspace*{\fill}
 \section*{Prohlášení}
-Předkládám tímto k posouzení a obhajobě bakalářskou práci zpracovanou
-na závěr studia na Fakultě aplikovaných věd Západočeské univerzity v Plzni.
+Předkládám tímto k~posouzení a~obhajobě bakalářskou práci zpracovanou
+na závěr studia na Fakultě aplikovaných věd Západočeské univerzity v~Plzni.
 \par
-Prohlašuji, že jsem bakalářskou práci vypracoval samostatně a výhradně s použitím odborné literatury
+Prohlašuji, že jsem bakalářskou práci vypracoval samostatně a~výhradně s~použitím odborné literatury
 a pramenů, jejichž úplný seznam je její součástí.
 \par
 \vspace{5mm}
 V Plzni dne \today \hfill ............................................
 % \null\hfill Pavel Březina
 \section*{Poděkování}
-Rád bych poděkoval Ing. Václavu Helmovi, vedoucímu této bakalářské práce, za řádné vedení, přátelskou komunikaci a věnovaný čas pravidelným konzultacím, které značně pomohly směru vývoje této práce.
-\vspace*{\fill}
+Rád bych poděkoval Ing. Václavu Helmovi, vedoucímu této bakalářské práce, za řádné vedení, přátelskou komunikaci a~věnovaný čas pravidelným konzultacím, které značně pomohly směru vývoje této práce.
+% \vspace*{\fill}
 \newpage
-\vspace*{\fill}
+% \null\newpage
 \section*{Abstrakt}
-Tato práce se zabývá automatickou kompenzací statických sil působících na mechatronický systém pomocí proudové kalibrační tabulky. Konkrétně se v práci prozkoumávají možnosti automatické aktualizace této tabulky pomocí NURBS interpolace a aproximace. Toto zahrnuje interpolaci a aproximaci 2D křivek, 3D křivek, 3D povrchů a 4D nadpovrchů, včetně jejich ukázek na obecných a konkrétních datech týkajících se problému této práce. Výsledkem práce je autonomní aktualizace proudové kalibrační tabulky za využití aproximace 4D nadpovrchu.
-\section*{\todo{Klíčová slova}}
+Tato práce se zabývá automatickou kompenzací statických sil působících na mechatronický systém pomocí proudové kalibrační tabulky. Konkrétně se v~práci prozkoumávají možnosti automatické aktualizace této tabulky pomocí NURBS interpolace a~aproximace. Toto zahrnuje interpolaci a~aproximaci 2D křivek, 3D křivek, 3D povrchů a~4D nadpovrchů včetně jejich ukázek na obecných a~konkrétních datech týkajících se problému této práce. Výsledkem práce je autonomní aktualizace proudové kalibrační tabulky za využití aproximace 4D nadpovrchu.
+\subsection*{Klíčová slova}
+kompenzace kvazistatických sil, datově orientované přímovazební řízení, NURBS křivky, NURBS (nad)povrchy, NURBS interpolace, NURBS aproximace, zpracování zašuměných dat, výpočetní tomograf, Phillips Azurion 7 C20
 \section*{Abstract}
-This paper deals with the automatic compensation of static forces acting on a mechatronic system using a current calibration table. Specifically, the work explores the possibilities of automatically updating this table using NURBS interpolation and approximation. This includes the interpolation and approximation of 2D curves, 3D curves, 3D surfaces and 4D hypersurfaces, including their demonstration on general and specific data relevant to the problem of this thesis. The result of this work is an autonomous update of the current calibration table using the 4D hypersurface approximation.
-\section*{\todo{Keywords}}
-
-\vspace*{\fill}
+This paper deals with the automatic compensation of static forces acting on a~mechatronic system using a~current calibration table. Specifically, the work explores the possibilities of automatically updating this table using NURBS interpolation and approximation. This includes the interpolation and approximation of 2D curves, 3D curves, 3D surfaces and 4D hypersurfaces, including their demonstration on general and specific data relevant to the problem of this thesis. The result of this work is an autonomous update of the current calibration table using the 4D hypersurface approximation.
+\subsection*{Keywords}
+compensation of quasi-static forces, data-driven feedforward control, NURBS curves, NURBS (hyper)surfaces, NURBS interpolation, NURBS approximation, processing of noisy data, CT machine, Phillips Azurion 7 C20
+\restoregeometry
 \newpage
+% \null\newpage
